--- a/client/Views/account.html
+++ b/client/Views/account.html
@@ -3,3 +3,52 @@
 
 
 </template>
+
+<!-- Custom login template -->
+
+<template name="myAtForm">
+  {{#unless hide}}
+    <div class="at-form">
+      <!-- {{#if showTitle}}
+        {{> atTitle}}
+      {{/if}}
+      {{#if showError}}
+        {{> atError}}
+      {{/if}}
+      {{#if showResult}}
+        {{> atResult}}
+      {{/if}}
+      {{#if showOauthServices}}
+        {{> atOauth}}
+      {{/if}}
+      {{#if showServicesSeparator}}
+        {{> atSep}}
+      {{/if}}
+      {{#if showPwdForm}}
+        {{> atPwdForm}}
+      {{/if}}
+      {{#if showTermsLink}}
+        {{> atTermsLink}}
+      {{/if}}
+      {{#if showSignInLink}}
+        {{> atSigninLink}}
+      {{/if}}
+      {{#if showSignUpLink}}
+        {{> atSignupLink}}
+      {{/if}} -->
+
+     <!--  <form>
+     <input type="text" id="at-field-name"> Name
+     <input type="email" id="at-field-email"> Email
+     
+     
+     </form> -->
+      {{> atTitle}}
+      {{> atPwdForm}}
+       {{#if showSignUpLink}}
+        {{> atSignupLink}}
+      {{/if}}
+
+    </div>
+  {{/unless}}
+</template>
