--- a/client/Views/defaultPage.html
+++ b/client/Views/defaultPage.html
@@ -1,11 +1,16 @@
 <template name="defaultPage">
 
+<div id="wrapper">
+
     {{> Template.dynamic template=nav}}
-    <main>
+
 
     	{{> Template.dynamic template=main}}
-	</main>
 
 
   {{> Template.dynamic template=footer}}
+
+  
+ </div>
+
 </template>
