--- a/client/Views/master_layout.html
+++ b/client/Views/master_layout.html
@@ -1,12 +1,13 @@
 <template name="masterLayout">
 
+<div id="wrapper">
+
 
    {{> Template.dynamic template=nav}}
 
- <div id="maincontainer">
    {{> Template.dynamic template=main}}
-</div>
 
+   {{> Template.dynamic template=footer}}  
+</div> 
 
-   {{> Template.dynamic template=footer}}   
 </template>
