--- a/client/Views/home.html
+++ b/client/Views/home.html
@@ -2,7 +2,7 @@
 <div id="easy_step">
     <img id ="jumboimage" src="imgs/logoimage_smaller3.png" alt="jumboimage">
         <div id="quickAdd">
-            <h1 class="quickAddheader inverted">As easy as 1   2    3 ....</h1>
+          <!--   <h1 class="quickAddheader inverted">As easy as 1   2    3 ....</h1> -->
                 <!-- <div class="quickAddform">
                     <h3>What are you looking for?</h3>
                  
