--- a/client/Views/home.html
+++ b/client/Views/home.html
@@ -1,7 +1,7 @@
 <template name="home">
-<div id="easy_step">
-    <img id ="jumboimage" src="imgs/logoimage_smaller3.png" alt="jumboimage">
-        <div id="quickAdd">
+
+   <!--  <img id ="jumboimage" src="imgs/logoimage_smaller3.png" alt="jumboimage"> -->
+        
           <!--   <h1 class="quickAddheader inverted">As easy as 1   2    3 ....</h1> -->
                 <!-- <div class="quickAddform">
                     <h3>What are you looking for?</h3>
@@ -16,9 +16,34 @@
                                {{> wizardButtons}} 
                                
                 </div>         -->
-        </div>
-</div>  
 
+
+             
+
+                <div id="jumbotron" class="ui two column grid">
+                    <div id="super_text" class="column">
+                        Simple and Effective
+                   
+                        <div>
+                         <p></p>
+                            <h2>Your home ideas, plans, needs </h2>
+                            <h2>Taken care of fast and reliable</h2>
+
+                        </div>
+                        <div>
+                            <h4>Just post the work to be done and the wide selection of available handymans will take care of the rest</h4>
+                        </div>
+                    </div>
+                    <div class="column">
+                        
+                        <img id ="jumboimage" src="imgs/smallhouse.jpg" alt="jumboimage">
+
+                    </div>
+                </div>
+
+
+<div id="easy_step">
+<div id="quickAdd">
 <div id="home" class="ui stackable three column grid">
     <div class="column">
         <div class="ui "> 
@@ -27,12 +52,12 @@
                     
                     <div class="homecolumns"> 
                         <i class="fa fa-plus-square-o" aria-hidden="true"></i>
-                        <span class ="header"><h2>Create a job</h2></span>
+                        <span class ="header"><h2>Post request</h2></span>
                      </div>   
                      <div class="ui divider"></div>
                      <div class="text">
                          <p>
-                                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                                In 3 quick steps you can post a job request so an entrepreneur would respond
                          </p>
                     </div>
 
@@ -52,12 +77,12 @@
                     
                     <div class="homecolumns"> 
                         <i class="fa fa-search" aria-hidden="true"></i>
-                        <span class ="header"><h2>Search jobs</h2></span>
+                        <span class ="header"><h2>Entrepeneur looking for jobs</h2></span>
                      </div>   
                      <div class="ui divider"></div>
                      <div class="text">
                          <p>
-                                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                                As an entrepeneur search for all available jobs 
                          </p>
                     </div>
 
@@ -82,7 +107,8 @@
                      <div class="ui divider"></div>
                      <div class="text">
                          <p>
-                                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                                You have had one job completed?
+                                This is the place to share your thoughts, comments and provide reviews yo your entrepeneur
                          </p>
                     </div>
 
@@ -97,7 +123,8 @@
 
 </div>
 
-
+</div>
+</div>
 
 
 
