--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,4 @@
+
 body{
 	margin:0;
 	padding:0;
@@ -17,6 +18,7 @@ body{
 	min-height:100%;
    position:relative;
 }
+
 
 #maincontainer{
 	padding-top: 10px;
@@ -191,12 +193,12 @@ tests for css logo; not used*/
 .main_page_container{
 	padding-top: 5%;
 	padding-bottom: 20%;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	margin-left: 10%;
 	margin-right: 10%;
 	margin-bottom: 10px;
 	margin-top: 10px;
-
+	
 	color:#666;
 }
 
