--- a/client/Views/home.html
+++ b/client/Views/home.html
@@ -1,7 +1,7 @@
 <template name="home">
   <div id="jumbotron" class="ui two column grid">
     <div id="super_text" class="column">
-      Simple and Effective
+      <h1>Simple and Effective</h1>
       
       <div>
         <p></p>
