--- a/client/style.css
+++ b/client/style.css
@@ -266,9 +266,14 @@ tests for css logo; not used*/
 
 /*MAP*/
 .map-container {
-  width: 100%;
+  width: 90%;
   max-width: 100%;
-  height: 500px;
+  height: 90%;
+  border: 2px;
+  padding-top:5%;
+  padding-bottom: 5%;
+
+
 }
 
 @media all and (min-width: 631px){
