Blaze version before going to React

--- a/client/Views/home.html
+++ b/client/Views/home.html
@@ -29,15 +29,16 @@
                   
                   <div class="homecolumns">
                     <i class="fa fa-plus-square-o" aria-hidden="true"></i>
-                    <span class ="header"><h2>Post request</h2></span>
+                    <span class ="header"><h2>Create a job</h2></span>
                   </div>
                   <div class="ui divider"></div>
                   <div class="text">
                     <h4>
-                      In 3 quick steps you can post a job request so an entrepreneur would respond
+                      Tell us what you need
                     </h4>
                     <p>
-          Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. 
+                    	In 3 quick steps you can create a job that you need to be done. Provide description so that the entrepreneurs 
+                    	can offer a good quotation
                     </p>
                   </div>
                   
@@ -51,15 +52,16 @@
                   
                   <div class="homecolumns">
                     <i class="fa fa-search" aria-hidden="true"></i>
-                    <span class ="header"><h2>Entrepeneur looking for jobs</h2></span>
+                    <span class ="header"><h2>Find a job</h2></span>
                   </div>
                   <div class="ui divider"></div>
                   <div class="text">
                     <h4>
-                      As an entrepeneur search for all available jobs
+                      Entrepeneur looking for a job
                     </h4>
-                            <p>
-          Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. 
+                    <p>
+                    	Browse the available jobs and , book them and provide the quotation to the owner.
+                    	If selected, the job is your to take
                     </p>
                   </div>
                   
@@ -80,11 +82,12 @@
                   <div class="ui divider"></div>
                   <div class="text">
                     <h4>
-                      You have had one job completed?
-                      This is the place to share your thoughts, comments and provide reviews yo your entrepeneur
+                    	Job done - leave feedback
                     </h4>
-        <p>
-          Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. 
+        			<p>
+        				You have had one job completed?
+                      This is the place to share your thoughts, comments and provide reviews 
+                   
                     </p>
                   </div>
                   
