--- a/client/lib/semantic-ui/theme.config.import.less
+++ b/client/lib/semantic-ui/theme.config.import.less
@@ -62,7 +62,7 @@
 @sidebar    : 'flat';
 @sticky     : 'flat';
 @tab        : 'flat';
-@transition : 'flat';
+@transition : 'default';
 
 /* Views */
 @ad         : 'flat';
